rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__date__tests__empty.snap
---
source: crates/rax-nmea/src/rules/date.rs
expression: result
---
Ok(
    (
        None,
        "foo,bar",
    ),
)
