rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__date__tests__invalid_date.snap
---
source: crates/rax-nmea/src/rules/date.rs
expression: result
---
Err(
    RuleError {
        reason: "parameter 'day' for `2024-02` is invalid, must be in range `1..=29`",
    },
)
