rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__date__tests__invalid_month.snap
---
source: crates/rax-nmea/src/rules/date.rs
expression: result
---
Err(
    RuleError {
        reason: "Failed to parse month.",
    },
)
