rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__date__tests__no_comma.snap
---
source: crates/rax-nmea/src/rules/date.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing Date string.",
    },
)
