rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__date__tests__valid.snap
---
source: crates/rax-nmea/src/rules/date.rs
expression: result
---
Ok(
    (
        Some(
            2024-03-11,
        ),
        "foo,bar",
    ),
)
